# distance-nerd-stuff

./: .gitignore  Agent Strava Plan.md  CLAUDE.md  Claude's Log.md  MIGRATION.md  MOBILE-REDESIGN-PLAN.md  README.md  pyproject.toml
.claude/agents/: running-log-qa.md  strava-creativity.md  strava-data-analyst.md  strava-developer.md  strava-maintenance.md  strava-qa.md  strava-viz-design.md
.claude/commands/: requirements.md  strava-segments.md  strava.md
.github/workflows/: deploy.yml  strava-fetch.yml
Claude Design/design_handoff_running_log/: README.md  Running Log Dashboard (Standalone).html  Running Log Dashboard.html
Running Log/: Rewrite Ideas.md  SESSION-HANDOFF.md  index.html  running_log.csv  running_log_story.html  running_log_story_handoff.md  strava.html
Running Log/source/: 05AllNE.html  06trkd3.html  1803.html  Hadd.doc  NEWMACstp1.wmv  NEWMACstp2.wmv  abig.html  addresses.htm  allNEs.html  allnexc05.html  alummeet.html  arcticair.html  articles.html  beach.html  big05.html  bio.html  bowdoin.html  coed.html  colby.html  cold.html  engcup.html  engcup06.html  fall03log.html  fall04log.html  fall05log.html  fall06log.html  family.html  fitness.html  (+64 more)
strava-data/: AGENTS.md  KNOWN-ISSUES.md  SEASONAL-HANDOFF.md  analyze_segments.py  backfill_segments.py  backfill_weather.py  build_dashboard.py  dashboard-spec.md  fetch.py  heat-toggle-plan.md  outlier-handling-proposal.md  requirements.txt  strava.html  weather.py
strava-export/: export.py  strava_activities_20260316_141409.csv  strava_activities_20260316_154519.csv
tools/: mobile_preview.py
(+714 files in other folders)
